@@ -1,0 +1,58 @@
+.yiiTab > ul
+{
+    padding: 3px 0;
+    margin: 0;
+    border-bottom: 1px solid #4F81BD;
+    font: bold 12px Verdana, sans-serif;
+}
+
+.yiiTab > ul li
+{
+    list-style: none;
+    margin: 0;
+    display: inline;
+}
+
+.yiiTab > ul a
+{
+    padding: 3px 0.5em;
+    margin-left: 3px;
+	-moz-border-radius-topleft:5px;
+	-moz-border-radius-topright:5px;
+    border: 1px solid #4F81BD;
+    border-bottom: none;
+    background: #d3dfee;
+    text-decoration: none;
+}
+
+.yiiTab > ul a:link
+{
+	color: #448;
+}
+
+.yiiTab > ul a:visited
+{
+	color: #667;
+}
+
+.yiiTab > ul a:hover
+{
+    color: #000;
+    background: #E6F2FF;
+    border-color: #227;
+}
+
+.yiiTab > ul a.active
+{
+    background: white;
+    border-bottom: 1px solid white;
+}
+
+.yiiTab > div
+{
+    border-left: 1px solid #4F81BD;
+    border-right: 1px solid #4F81BD;
+    border-bottom: 1px solid #4F81BD;
+    padding: 0;
+    margin: 0;
+}
