@@ -8,6 +8,7 @@ Version 1.0 to be released
 - Added hashByName option to asset manager (Qiang)
 - Fixed a bug in CHtml::dropDownList() which doesn't render the 'name' attribute (Qiang)
 - Added CHtml::openTag and CHtml::closeTag (Qiang)
+- Added CTabWidget (Qiang)
 
 Version 1.0rc November 10, 2008
 -------------------------------
